@@ -164,3 +164,10 @@ command:
  else
      echo "kvm: unsupported"
  fi
+
+name: wifi_interface_mode
+plugin: resource
+command: wifi_interface_mode_resource
+requires: package.name == "iw"
+estimated_duration: 0.04
+description: Creates resource info for wifi supported interface modes.
