@@ -1,0 +1,16 @@
+#!/usr/bin/python3
+
+import re
+import subprocess
+
+lookup = False
+for i in subprocess.check_output(['iw', 'list']).splitlines():
+    if b"Supported interface modes" in i:
+        lookup = True
+        continue
+    if lookup:
+        m = re.match(b'^\s*\*\s+(.*)', i)
+        if m:
+            print("{}: supported".format(m.group(1).decode()))
+        else:
+            lookup = False
