@@ -39,6 +39,10 @@ checkbox (0.16.13) UNRELEASED; urgency=low
   [ Zygmunt Krynicki ]
   * Remove the GTK+ and Urwid interfaces
 
+  [ Sylvain Pineau]
+  * jobs/resource.txt.in, scripts/wifi_interface_mode_resource: new resource
+    job to detect the wifi chip supported interface modes.
+
  -- Taihsiang Ho <taihsiang.ho@canonical.com>  Mon, 14 Oct 2013 17:35:23 -0400
 
 checkbox (0.16.12) saucy; urgency=low
